fix icons on the toolbar in dark mode

--- a/admin_ui/src/main.less
+++ b/admin_ui/src/main.less
@@ -159,6 +159,14 @@ body, textarea, button {
             background-color: lighten(@light_blue, 10%);
         }
     }
+
+    .quillWrapper .ql-snow .ql-stroke {
+        stroke: white; 
+    }
+    
+    .quillWrapper .ql-snow .ql-fill {
+        fill: white;
+    }
 }
 
 #app {
@@ -252,5 +260,5 @@ svg {
 }
 
 div.quillWrapper .ql-snow.ql-toolbar .ql-formats {
-    margin-bottom: 23px;
+    margin-bottom: 1.5rem;
 }
